[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "requests>=2.32.4",
    "flask-caching>=2.1.0",
    "numpy>=2.3.0",
    "psutil>=7.0.0",
    "scikit-learn>=1.7.0",
]
